packages/fuels-macros/tests/ui/setup_contract_test/contract_not_generated.stderr
error: Add an `Abigen(..)` command!
 --> tests/ui/setup_contract_test/contract_not_generated.rs:3:22
  |
3 | setup_contract_test!(Deploy(
  |                      ^^^^^^
